* Changelog

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.5...dev][Unreleased]]

*** Added
*** Changed
+ *tetragono*: =new_dimension= in simple update will be intepreted as the threshold of singular value when it is float.
*** Deprecated
*** Removed
*** Fixed

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.3...v0.3.4][v0.3.5]] - 2023-04-01

*** Added
+ *tetragono*: Add common used tensors for parity symmetry and some related tensor in Hubbard model with parity
  symmetry.
+ *scalapack.py*: Add documents for scalapack.py.
+ *tetraku*: Add tV model.
+ *tetragono* Add =numpy_hamiltonian= in tetragono shell to export the Hamiltonian of a model to a file in numpy array
  format.
*** Changed
+ *tetraku*: Density matrix of Heisenberg/tJ/Hubbard model are renamed to =gibbs_*= from =density_matrix_*=.
+ *tetragono*: Simple update will check to avoid merge physical edges into a single edge with very large dimension. It
  will only merge edges if the result edge has the dimension less equal to the =threshold=, which is =6= by default.
+ *tetragono*: Use better method to estimate the variance of measurement results observed by the sampling method.
+ *tetragono*: Tetragono shell will not refresh the corresponding configuration when creating or loading ap or gm state.
  Since sometimes user may want to share the configuration between states.
+ *tetragono*: Use pseudo inverse directly in conjugate gradient method.
+ *TAT.py*: Use mt19937(64 bit) as the random generator instead of c++ default random generator which may be different
  on different platforms.
*** Removed
+ *tetragono*: The mirror direct sampling is removed, since it is useless according to the test result.
*** Fixed
+ *tetragono*: Fix bug in min-SR method when the model is complex, A conjugate operator was missing.
+ *tetragono*: Avoid =nan= in pseudo inverse of min-SR by checking whether the eigenvalue is zero first.
+ *tetragono*: Fix the missing imaginary part of energy when calculating gradient.