@@ -3,6 +3,9 @@
 ** [[https://github.com/USTC-TNS/TAT/compare/v0.3.5...dev][Unreleased]]
 
 *** Added
++ *TAT.hpp*: Add =clear_fermi_symmetry= for tensor with fermionic symmetry, which convert the tensor to the simplest
+  fermionic tensor, tensor with parity symmetry.
++ *TAT.py*: Add python binding for =clear_fermi_symmetry=.
 *** Changed
 + *tetragono*: =new_dimension= in simple update will be intepreted as the threshold of singular value when it is float.
 *** Deprecated
